Ready-to-go draft of AWS serverless get solution
All required files and templates are added in order to create service and extend it with bunch of GET methods

--- a/src/aws/templates/tsconfigs/tsconfig.paths.json
+++ b/src/aws/templates/tsconfigs/tsconfig.paths.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@functions": ["src/functions/index.ts"],
       "@functions/*": ["src/functions/*"],
       "@infrastructure/*": ["src/infrastructure/*"],
       "@deployment/*": ["deployment/*"],
