--- a/package.json
+++ b/package.json
@@ -2,20 +2,26 @@
   "name": "cloud-swag",
   "version": "0.0.1",
   "description": "Cloud Simple Web Api Generator",
-  "main": "index.js",
+  "main": "index.ts",
   "bin": {
-    "cloud-swag": "./index.js"
+    "cloud-swag": "./dist/index.js"
   },
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:plop": "node ./build.js",
+    "build": "npm run compile && npm run build:plop",
+    "compile": "tsc --project tsconfig.json --noEmit"
   },
   "keywords": [],
   "author": "Azat Davliatshin (ardavlyatshin@gmail.com)",
   "license": "ISC",
   "devDependencies": {
     "@types/minimist": "^1.2.2",
-    "prettier": "2.8.4"
+    "esbuild": "^0.17.12",
+    "esbuild-copy-static-files": "^0.1.0",
+    "esbuild-plugin-clean": "^1.0.1",
+    "prettier": "2.8.4",
+    "typescript": "^5.0.2"
   },
   "dependencies": {
     "minimist": "^1.2.8",
