--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloud-swag",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "description": "Cloud Simple Web Api Generator",
   "main": "index.ts",
   "bin": {
@@ -26,5 +26,10 @@
   "dependencies": {
     "minimist": "^1.2.8",
     "plop": "^3.1.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/azatdavliatshin/cloud-swag"
+  },
+  "homepage": "https://github.com/azatdavliatshin/cloud-swag#readme"
 }
