--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "keywords": [],
   "author": "Azat Davliatshin (ardavlyatshin@gmail.com)",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/minimist": "^1.2.2",
     "esbuild": "^0.17.12",
